# DPDetectionPrevention

./: .env.example  Makefile  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
agents/: __init__.py
agents/behavioral_agent/: __init__.py  graph.py  runner.py  state.py
agents/behavioral_agent/nodes/: __init__.py  aggregate.py  basket_sneaking.py  forced_action.py  nagging.py  preprocess.py  rogue_malicious.py  saas_billing.py  subscription_trap.py
agents/behavioral_agent/prompts/: basket_sneaking.txt  forced_action.txt  nagging.txt  rogue_malicious.txt  saas_billing.txt  subscription_trap.txt
agents/nlp_agent/: __init__.py  graph.py  runner.py  state.py
agents/nlp_agent/nodes/: __init__.py  (+6 more)
agents/orchestrator_agent/: __init__.py  graph.py  models.py  runner.py  state.py
agents/prevention_agent/: __init__.py  graph.py  models.py  patch_builder.py  runner.py  state.py  strategy_registry.py
agents/pricing_agent/: __init__.py  graph.py  runner.py  state.py
agents/shared/: __init__.py  models.py  openai_client.py
agents/visual_agent/: __init__.py  graph.py  runner.py  state.py
backend/: config.py  main.py
backend/cache/: __init__.py  redis_client.py  session_store.py
backend/scraper/: __init__.py  browser_pool.py  extractors.py  models.py  page_classifier.py  playwright_scraper.py
docker/: Dockerfile.backend  Dockerfile.mcp
extension/: background.js  content.js  generate_icons.py  manifest.json  popup.css  popup.html  popup.js
mcp_server/: __init__.py  server.py
mcp_server/tools/: __init__.py  scrape_tool.py
(+46 files in other folders)
