[project]
name = "dpdetection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles==24.1.0",
    "alembic==1.15.2",
    "asyncpg==0.30.0",
    "beautifulsoup4==4.13.4",
    "black==25.1.0",
    "fastapi==0.115.12",
    "hiredis==3.2.1",
    "httpx==0.28.1",
    "jinja2==3.1.6",
    "langchain==0.3.25",
    "langchain-core==0.3.60",
    "langchain-openai==0.3.17",
    "langgraph==0.4.3",
    "loguru==0.7.3",
    "lxml==5.4.0",
    "mcp==1.9.0",
    "mypy==1.15.0",
    "openai==1.78.1",
    "orjson==3.10.18",
    "playwright==1.52.0",
    "pydantic==2.11.4",
    "pydantic-settings==2.9.1",
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
    "pytest-mock==3.14.0",
    "python-dotenv==1.1.0",
    "python-multipart==0.0.20",
    "qdrant-client==1.14.2",
    "redis==6.0.0",
    "ruff==0.11.8",
    "slowapi==0.1.9",
    "sqlalchemy==2.0.40",
    "structlog==25.3.0",
    "tenacity==9.1.2",
    "tiktoken==0.9.0",
    "typing-extensions==4.13.2",
    "uvicorn[standard]==0.34.2",
    "websockets==15.0.1",
]
